--- a/BlackSpark/app/src/main/AndroidManifest.xml
+++ b/BlackSpark/app/src/main/AndroidManifest.xml
@@ -13,12 +13,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" >
+        <activity
+            android:name=".SearchActivity"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ControlActivity"
+            android:label="LED Control" >
         </activity>
     </application>
 
